[tool.poetry]
name = "one-max-problem"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlrose = {git = "https://github.com/gkhayes/mlrose.git"}
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
