[tool.poetry]
name = "one-max-problem"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlrose = {git = "https://github.com/gkhayes/mlrose.git"}
ipykernel = "^6.29.4"
easyga = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
